<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="net.liz.albunmusic.MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/bg_fondo"
            android:id="@+id/frameLayout">

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/titulo"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo_fondo"
                    android:gravity="center"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:background="#53292929"
                    android:textSize="32sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="119dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mismusicas"
                    android:gravity="center"
                    android:background="#53292929"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    />
            </LinearLayout>

        </RelativeLayout>

        <!--Card View -->
        <RelativeLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/frameLayout">
            <LinearLayout
                android:id="@+id/card1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.v7.widget.CardView
                    android:id="@+id/maluma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="0.5">

                    <LinearLayout
                        android:id="@+id/foto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">
                        <ImageView
                            android:id="@+id/maluma2"
                            android:layout_width="130dp"
                            android:layout_height="130dp"
                            android:src="@drawable/bg_maluma" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/musica"
                            android:layout_margin="3dp"
                            android:drawableRight="@drawable/ic_more_vert"
                            android:gravity="left"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/musica2"
                            android:layout_margin="3dp"/>
                    </LinearLayout>

                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="0.5">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:gravity="center">

                        <ImageView
                            android:layout_width="130dp"
                            android:layout_height="130dp"
                            android:src="@drawable/bg_jowel"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/albun2"
                            android:layout_margin="3dp"
                            android:drawableRight="@drawable/ic_more_vert"
                            android:gravity="left"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/musica2"
                            android:layout_margin="3dp"/>
                    </LinearLayout>


                </android.support.v7.widget.CardView>
            </LinearLayout>



        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/container">
            <LinearLayout
                android:id="@+id/card2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="0.5">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="130dp"
                            android:layout_height="130dp"
                            android:src="@drawable/bg_panlb" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/name"
                            android:layout_margin="3dp"
                            android:drawableRight="@drawable/ic_more_vert"
                            android:gravity="left"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/albun2"
                            android:layout_margin="3dp"/>
                    </LinearLayout>

                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="0.5">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="130dp"
                            android:layout_height="130dp"
                            android:src="@drawable/bg_rulat"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/albun3"
                            android:layout_margin="3dp"
                            android:drawableRight="@drawable/ic_more_vert"
                            android:gravity="left"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/albun4"
                            android:layout_margin="3dp"/>
                    </LinearLayout>


                </android.support.v7.widget.CardView>
            </LinearLayout>



        </RelativeLayout>



    </RelativeLayout>
</ScrollView>